--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="favicon.svg" />
+    <link rel="icon" type="image/svg+xml" href="./src/assets/images/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>SpectraAI - AI-Powered Spectroscopy Analysis</title>
     <meta name="description" content="Transform your spectral data analysis with AI-powered tools. Upload, ask, and analyze your data through a simple chat interface. " />
